fix for smaller screens
buttons took up too much space. still need to add dismiss for directions and work on buttons on moblie.

--- a/src/css/_custom.scss
+++ b/src/css/_custom.scss
@@ -362,6 +362,17 @@ html, body {
   min-height: 0px;
 }
 
+
+@media (max-height: 800px) {
+  .user-shape {
+    height: 60px !important;
+  }
+
+  .upload-all {
+    top: -5px !important;
+  }
+}
+
 .btn-light {
   background-color:  $body-color;
   color: $body-bg;
@@ -827,6 +838,7 @@ p.not-found {
   -webkit-border-radius: 0.25rem;
   -moz-border-radius: 0.25rem;
 }
+
 
 @media (max-width: 992px) { //768px
   #top-bar{
